changes on scalar
